[package]
name = "wasm-compresso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["system", "strings"]
system = ["wee_alloc"]
browser = ["wee_alloc"]
strings = ["base64"]
# default = ["console_error_panic_hook",]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies]
wasm-bindgen = "0.2.58"
flate2 = "1.0.13"
base64 = {version="0.11.0", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
brotli = "3.3.4"
mozjpeg = "0.9.3"
oxipng = "5.0.1"


[profile.release]
# Tell `rustc` to optimize for speed
# opt-level = 3
opt-level = 'z'
lto = true
